@@ -18,12 +18,32 @@ UNIX BUILD
 
 Building under most UNIX systems is easy, just run the configure script
 and then run make. For more information about the build process, see
-the tcl/unix/README file in the Tcl src dist. The following minimal
-example will install the extension in the /opt/tcl directory.
+the tcl/unix/README file in the Tcl src dist. 
+
+Following examples use the tclConfig.sh script. This script comes with the
+installation of Tcl and contains useful data about the installation.
+
+Linux
+-----
+
+To install Tcl, use e.g. 'apt-get|yum install tcl-devel.<platform> tcllib'.
+The tclConfig.sh script is located in the folder /usr/lib/
 
 	$ cd tcludp
-	$ ./configure --prefix=/opt/tcl
+	$ ./configure --with-tcl=/usr/lib/
 	$ make
+	$ make test
+	$ make install
+
+MacOSX
+------
+To install Tcl, use e.g. ActiveState Tcl distribution. The tclConfig.sh script
+is located in the folder /Library/Frameworks/Tcl.framework/
+
+	$ cd tcludp
+	$ ./configure --with-tcl=/Library/Frameworks/Tcl.framework/
+	$ make
+	$ make test
 	$ make install
 
 WINDOWS BUILD
